ARROW-16695: [R][Python][C++] Extension types are not supported in joins (#13501)

This is to resolve [ARROW-16695](https://issues.apache.org/jira/browse/ARROW-16695).

Authored-by: Rok <rok@mihevc.org>
Signed-off-by: Rok <rok@mihevc.org>